Fix height of SVGs and 1px gap

--- a/modules/backend/widgets/mediamanager/assets/less/mediamanager.less
+++ b/modules/backend/widgets/mediamanager/assets/less/mediamanager.less
@@ -310,6 +310,7 @@ div[data-control="media-manager"] {
     .sidebar-image-placeholder-container {
         display: table;
         width: 100%;
+        border-bottom: 1px solid #ecf0f1;
     }
 
     .sidebar-image-placeholder {
@@ -318,7 +319,6 @@ div[data-control="media-manager"] {
         position: relative;
         vertical-align: middle;
         text-align: center;
-        border-bottom: 1px solid #ecf0f1;
 
         &[data-loading] {
             background: #ecf0f1;
@@ -343,7 +343,7 @@ div[data-control="media-manager"] {
 
         img {
             max-width: 100%;
-            max-height: 224px;
+            height: inherit;
         }
     }
 
